        Reviewed by Anders.

http://bugs.webkit.org/show_bug.cgi?id=11898
        CSSMediaRule functions insertRule and deleteRule assert when called from js in debug builds

        Test explicitly for the two media rule functions so it ends up calling callAsFunction.



Canonical link: https://commits.webkit.org/15429@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18376 268f45cc-cd09-0410-ab3c-d52691b4dbfc